<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/txtBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/txtBox1"
        app:layout_constraintTop_toTopOf="@id/txtBox1"
        app:layout_constraintBottom_toBottomOf="@id/txtBox1"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/txtBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/txtBox2"
        app:layout_constraintTop_toTopOf="@id/txtBox2"
        app:layout_constraintBottom_toBottomOf="@id/txtBox2"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/txtBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/txtBox3"
        app:layout_constraintTop_toTopOf="@id/txtBox3"
        app:layout_constraintBottom_toBottomOf="@id/txtBox3"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/txtBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/txtBox4"
        app:layout_constraintTop_toTopOf="@id/txtBox4"
        app:layout_constraintBottom_toBottomOf="@id/txtBox4"
        android:layout_marginStart="8dp"/>


    <Button
        android:id="@+id/a_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/b_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/a_button"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/c_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/d_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/c_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/e_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/d_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/f_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/a_button"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/g_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/f_button"
        app:layout_constraintTop_toBottomOf="@id/b_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/h_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/g_button"
        app:layout_constraintTop_toBottomOf="@id/c_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/i_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/h_button"
        app:layout_constraintTop_toBottomOf="@id/d_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/j_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/i_button"
        app:layout_constraintTop_toBottomOf="@id/e_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/k_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/k_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/f_button"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/l_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/k_button"
        app:layout_constraintTop_toBottomOf="@id/g_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/m_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/l_button"
        app:layout_constraintTop_toBottomOf="@id/h_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/n_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/m_button"
        app:layout_constraintTop_toBottomOf="@id/i_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/o_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/n_button"
        app:layout_constraintTop_toBottomOf="@id/j_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/p_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/k_button"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/q_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/p_button"
        app:layout_constraintTop_toBottomOf="@id/l_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/r_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/q_button"
        app:layout_constraintTop_toBottomOf="@id/m_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/s_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/r_button"
        app:layout_constraintTop_toBottomOf="@id/n_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/t_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/s_button"
        app:layout_constraintTop_toBottomOf="@id/o_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/u_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/u_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/p_button"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/v_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/v_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/u_button"
        app:layout_constraintTop_toBottomOf="@id/q_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/w_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/w_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/v_button"
        app:layout_constraintTop_toBottomOf="@id/r_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/x_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/w_button"
        app:layout_constraintTop_toBottomOf="@id/s_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/y_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/x_button"
        app:layout_constraintTop_toBottomOf="@id/t_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/z_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/z_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/v_button"
        app:layout_constraintTop_toBottomOf="@id/w_button"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>